[gd_scene load_steps=8 format=2]

[ext_resource path="res://props/textures/bush.png" type="Texture" id=2]
[ext_resource path="res://props/textures/columns.png" type="Texture" id=3]
[ext_resource path="res://props/textures/grass.png" type="Texture" id=4]
[ext_resource path="res://map_pieces/map_piece.gd" type="Script" id=5]
[ext_resource path="res://props/color_tint_shader.tres" type="Shader" id=6]
[ext_resource path="res://tilesets/tileset.tres" type="TileSet" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 6 )
shader_param/color_multiplier = Plane( 1, 1, 1, 1 )
shader_param/color_additive = Plane( 0, 0, 0, 0 )

[node name="MapPiece" type="Node2D"]
material = SubResource( 1 )
z_index = 3
script = ExtResource( 5 )
first_tile = Vector2( -2, -3 )
tilemap_size = Vector2( 4, 7 )

[node name="WallsLower" type="TileMap" parent="."]
use_parent_material = true
tile_set = ExtResource( 7 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
collision_layer = 256
collision_mask = 256
format = 1
tile_data = PoolIntArray( -65538, 7, 262144, -65537, 7, 262145, -131072, 7, 262145, -131071, 7, 262146, -2, 7, 0, -1, 7, 4, -65536, 7, 1, -65535, 7, 131077, 65534, 7, 0, 65535, 7, 1, 0, 7, 131076, 1, 7, 131077, 131070, 7, 131072, 131071, 7, 131076, 65536, 7, 131073, 65537, 7, 5, 196606, 7, 131072, 196607, 7, 131073, 131072, 7, 4, 131073, 7, 5, 262142, 7, 65536, 262143, 7, 65539, 196608, 7, 196612, 196609, 7, 196613 )
__meta__ = {
"_edit_lock_": true
}

[node name="Grass" type="TileMap" parent="."]
use_parent_material = true
tile_set = ExtResource( 7 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
format = 1
tile_data = PoolIntArray( -131074, 3, 458758, -131073, 3, 0, -196608, 3, 0, -196607, 3, 458759, -65538, 3, 0, -65537, 3, 0, -131072, 3, 0, -131071, 3, 0, -2, 3, 0, -1, 3, 0, -65536, 3, 0, -65535, 3, 0, 65534, 3, 0, 65535, 3, 0, 0, 3, 0, 1, 3, 0, 131070, 3, 0, 131071, 3, 0, 65536, 3, 0, 65537, 3, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Walls" type="TileMap" parent="."]
use_parent_material = true
tile_set = ExtResource( 7 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
collision_layer = 512
collision_mask = 512
format = 1
tile_data = PoolIntArray( -131074, 2, 0, -131073, 2, 131076, -196608, 2, 131077, -196607, 2, 1, -65538, 2, 327690, -65537, 2, 327686, -131072, 2, 327686, -131071, 2, 9, -2, 2, 196618, -1, 2, 327686, -65536, 2, 327686, -65535, 2, 9, 65534, 2, 10, 65535, 2, 327686, 0, 2, 327686, 1, 2, 196617, 131070, 2, 262154, 131071, 2, 327686, 65536, 2, 327686, 65537, 2, 9, 196606, 2, 65536, 196607, 2, 196608, 131072, 2, 196612, 131073, 2, 65539 )
__meta__ = {
"_edit_lock_": true
}

[node name="Props" type="YSort" parent="."]
use_parent_material = true
__meta__ = {
"_edit_lock_": true
}

[node name="Bush1" type="Sprite" parent="Props"]
use_parent_material = true
position = Vector2( -42, -78 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 136, 80, 48, 40 )

[node name="Bush2" type="Sprite" parent="Props"]
use_parent_material = true
position = Vector2( -35, 43 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 8, 72, 48, 48 )

[node name="Bush3" type="Sprite" parent="Props"]
use_parent_material = true
position = Vector2( 3, 47 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 16, 16, 32, 32 )

[node name="Bush4" type="Sprite" parent="Props"]
use_parent_material = true
position = Vector2( -39, 16 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 16, 32, 32 )

[node name="Bush5" type="Sprite" parent="Props"]
use_parent_material = true
position = Vector2( 43, -57 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 16, 16, 32, 32 )

[node name="Column" type="Sprite" parent="Props"]
use_parent_material = true
position = Vector2( 1, -86 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 96 )

[node name="Grass1" type="Sprite" parent="Props"]
use_parent_material = true
position = Vector2( 8, -40 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 72, 40, 16, 16 )

[node name="Grass2" type="Sprite" parent="Props"]
use_parent_material = true
position = Vector2( 20, -51 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 8, 104, 16, 16 )

[node name="SelectionArea" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SelectionArea"]
polygon = PoolVector2Array( -64, -96, -64, 128, 64, 128, 64, -96 )

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CollisionArea"]
polygon = PoolVector2Array( -56, 120, -56, -24, 56, -24, 56, 120 )
__meta__ = {
"_edit_lock_": true
}

[node name="StairsUpper" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="StairsLower" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 32
format = 1
__meta__ = {
"_edit_lock_": true
}

[connection signal="mouse_entered" from="SelectionArea" to="." method="_on_SelectionArea_mouse_entered"]
[connection signal="mouse_exited" from="SelectionArea" to="." method="_on_SelectionArea_mouse_exited"]
[connection signal="area_entered" from="CollisionArea" to="." method="_on_CollisionArea_area_entered"]
[connection signal="area_exited" from="CollisionArea" to="." method="_on_CollisionArea_area_exited"]
